Fixed style on iPhone

--- a/resources/css/popup.css
+++ b/resources/css/popup.css
@@ -8,7 +8,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.3);
     justify-content: center;
     align-items: center;
     z-index: 1000;
@@ -21,19 +21,27 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 10px;
-    top: 40px;
-    border-radius: 10px;
+    /* top: 40px; */
+    border-radius: 6px;
     max-height: 612px;
-    width: 60%;
-    min-width: 250px;
-    max-width: 400px;
+    /* height: 652px; */
+    width: 70%;
+    min-width: 300px;
+    max-width: 500px;
     overflow-y: auto;
     scrollbar-color: transparent;
     -webkit-scrollbar: none;
 }
 
+.addBookPopup-content::-webkit-scrollbar {
+    background-color: transparent;
+    color: #121212;
+    border-radius: 6px;
+    width: 8px;
+}
+
 .addBookPopup-content::-webkit-scrollbar-thumb {
-    background: var(--spine-color-2);
+    background: var(--bg-color);
     width: 7px;
     border-radius: 6px;
 }
@@ -61,7 +69,7 @@
     max-width: 100%;
 
     height: 35px;
-    
+
     /* padding: 0 10px; */
     outline: none;
     border-radius: 8px;
@@ -69,7 +77,7 @@
     margin-top: 5px;
     margin-bottom: 10px;
     font-size: 15px;
-    
+
 }
 
 .synTextArea {
@@ -102,7 +110,7 @@
     background-color: var(--button-lighter);
 }
 
-.pages input::-webkit-outer-spin-button, 
+.pages input::-webkit-outer-spin-button,
 .pages input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
